# PatchLoop

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  Dockerfile.sandbox  LICENSE  README.md  SESSIONS.md  pyproject.toml
eval/: TASK_TAXONOMY.md
eval/analysis/: stats.py  stats_016_017.py  stats_018_020.py
eval/tasks/: mini_001.yaml  mini_002.yaml  mini_003.yaml  mini_004.yaml  mini_005.yaml  mini_006.yaml  mini_007.yaml  mini_008.yaml  mini_009.yaml  mini_010.yaml  mini_011.yaml  mini_012.yaml  mini_013.yaml  mini_014.yaml  mini_015.yaml  mini_016.yaml  mini_017.yaml  mini_018.yaml  mini_019.yaml  mini_020.yaml  mini_021.yaml  mini_022.yaml  mini_023.yaml  mini_024.yaml  mini_025.yaml  mini_026.yaml  mini_027.yaml
eval/tasks/repos/mini_001/: retry.py  test_retry.py
eval/tasks/repos/mini_002/: paginator.py  test_paginator.py
eval/tasks/repos/mini_003/: stats.py  test_stats.py
eval/tasks/repos/mini_004/: reader.py  test_jsonl.py  writer.py
eval/tasks/repos/mini_005/: config.py  test_config.py
eval/tasks/repos/mini_006/: renderer.py  slug.py  test_anchor_sync.py  toc.py
eval/tasks/repos/mini_007/: paths.py  test_paths.py
eval/tasks/repos/mini_008/: grouping.py  test_grouping.py
patchloop/: cli.py
patchloop/agent/: loop.py  patcher.py  planner.py  reflector.py  state.py
patchloop/environment/: base.py  docker_env.py  git_ops.py  local_env.py  task.py
patchloop/eval/: baselines.py  bench_runner.py  metrics.py
patchloop/llm/: client.py
patchloop/memory/: store.py
patchloop/observability/: logger.py
tests/: test_bench_config.py  test_planner.py
(+165 files in other folders)
